# skill-testing-playground

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  skill_server.py
agent/: harness_config.yaml  router.py  specialists.py  travel_agent.py
docs/: architecture.excalidraw  architecture.html
eval/: ab_compare.py  classify_failures.py  cost.py  coverage.py  export_skill.py  gate_check.py  gate_thresholds.yaml  leaderboard.py  orchestrator_compare.py  run_task.py  schemas.py  skill_loader.py  skill_manager.py  skill_router.py  taskgen.py  tracing.py  trajectory.py  trigger_eval.py
proposals/: 2026-06-11-detection-suite-evals.md  2026-06-11-fare-rules-skill-update.md  2026-06-11-flight-search-rework-or-retire.md  2026-06-11-stale-reruns.md  2026-06-11-weights-layer.md  README.md
pyramid/: analyze.py
results/: ancillery-skill_ab_results.json  ancillery_expanded_bank_smoke.json  ancillery_iter2_merged.json  ancillery_iter3.json  ancillery_post_externalization_verify.json  ancillery_pre_externalization_baseline.json  book-itinerary_ab_results.json  booking-skill_ab_results.json  disruption-handling_ab_results.json  disruption_handedit_eval.json  disruption_multiturn_eval.json  disruption_post107fix_eval.json  disruption_repaired_tasks_eval.json  fare-rules_ab_results.json  flight-search_ab_results.json  flightsearch_iter2_merged.json  flightsearch_iter3.json  hotel-search_ab_results.json  modify-booking_ab_results.json  orchestrator_full.json  orchestrator_full_capability_safe.json  orchestrator_full_safe_fallback.json  orchestrator_pilot.json  (+2 more)
(+1917 files in other folders)
