[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-testing-playground"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "langsmith>=0.2.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-sdk>=1.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "openai>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "langfuse>=2.0",
    "sentence-transformers>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
    "skillopt>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["eval*", "agent*", "pyramid*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: long-running integration tests"]
